examples/test/testpolicy7974.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7974
  namespace: namespace214
spec:
  podSelector:
    matchLabels:
      key37: value31
      key47: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value7
          key46: value16
          key24: value30
      podSelector:
        matchLabels:
          key42: value45
          key7: value42
          key44: value29
